--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Runner</title>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <h1>Hello, GitHub Actions!</h1>
-    <script src="script.js"></script>
+    <div id="result"></div>
 </body>
 </html>
